@@ -866,11 +866,6 @@ in its boot sector.)
 Note that /sbin/lilo must be re-run if a partition table mapped referenced
 with `table' is modified.
 .TP
-.BI "table=" <drive-letter>
-This option is obsolete. It were used in the special case with the obsolete
-.I os2_d
-chain loader.
-.TP
 .BI "change"
 This keyword starts a section which describes how primary partition IDs are
 changed, and how primary partitions are activated and deactivated.  If
