@@ -91,27 +91,6 @@ other=/dev/sdb2
 	map-drive = 0x81  to = 0x82
 	map-drive = 0x82  to = 0x80
 
-#
-#  We can boot OS/2 from a secondary partition.  The 'table='
-#  specification tells OS/2 that the secondary (boot) parition
-#  mounts as drive E:.  Versions of LILO prior to version 22 will 
-#  require a special boot loader, but as of version 22, all
-#  chain loader functions have been combined into the default
-#  chain loader, '/boot/chain.b'.
-
-other=/dev/sda5
-#	loader=/boot/os2_d.b
-	label=os2
-	table=E:
-	change
-	  partition=/dev/hda1
-	    set=DOS16_big_hidden
-	  partition=/dev/hda2
-	    set=NTFS_hidden
-
-#  Partition change rules are required to force drive E: to 
-#  be assinged properly.  MS & IBM partitions may be NORMAL
-#  or HIDDEN.
 
 #########################################
 # end sample-raid.conf			#
