@@ -2,7 +2,7 @@
  * 
  * Copyright 1992-1998 Werner Almesberger
  * Copyright 1999-2006 John Coffman
- * Copyright 2009-2011 Joachim Wiedorn
+ * Copyright 2009-2013 Joachim Wiedorn
  * All rights reserved.
  * 
  * Licensed under the terms contained in the file 'COPYING'
@@ -230,7 +230,7 @@
 #define PART_WIN_EXTD_LBA 0xF	/* Win95/98 Extended partition */
 #define PART_LINUX_EXTD   0x85	/* Linux Extended partition */
 #define PART_LINUX_LVM    0x8E /* Linux LVM partition */
-#define PART_OS2_BOOTMGR  0xA	/* OS/2 Boot Manager */
+/* #define PART_OS2_BOOTMGR  0xA	-  OS/2 Boot Manager */
 
 #define PART_DOS12	  1	/* DOS 12 bit FAT partition type */
 #define PART_DOS16_SMALL  4	/* DOS 16 bit FAT partition type, < 32 MB */
